--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "hjs": "~0.0.6",
     "http-errors": "~1.6.2",
     "mongodb": "^3.2.2",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "multer": "^1.4.1"
   }
 }
